# hose5db1d445-2d15-43ff-9eec-9e00badb7ec1

./: .env.example  README.md  pyproject.toml  schema.prisma
project/: createCompatibility_service.py  createMeasurement_service.py  createProduct_service.py  createTip_service.py  createUser_service.py  deleteCompatibility_service.py  deleteMeasurement_service.py  deleteProduct_service.py  deleteTip_service.py  deleteUser_service.py  fetchCompatibilities_service.py  getCompatibility_service.py  getMeasurement_service.py  getProductDetails_service.py  getPurchasePlatforms_service.py  getTip_service.py  getUserDetails_service.py  listMeasurements_service.py  listProducts_service.py  listTips_service.py  listUsers_service.py  logUserInquiry_service.py  server.py  updateCompatibility_service.py  updateMeasurement_service.py  updateProduct_service.py  updateTip_service.py  updateUser_service.py
